# Hoshi-Reader-Terminal

./: .gitignore  LICENSE  README.md  README.zh-CN.md  install.ps1  pyproject.toml
Formula/: hoshi-reader-terminal.rb
bucket/: hoshi-reader-terminal.json
examples/: demo_book.txt
examples/mini-yomitan/: index.json  term_bank_1.json  term_meta_bank_1.json
hoshi_terminal/: __init__.py  anki.py  audio.py  cli.py  dictionary.py  epub.py  reader.py  sasayaki.py  storage.py  sync.py  terminal.py  updates.py
scripts/: build_packages.py  generate_readme_assets.py  package_standalone.py  pyinstaller_entry.py
tests/: test_anki.py  test_audio.py  test_cli.py  test_dictionary.py  test_epub.py  test_reader.py  test_sasayaki.py  test_sync.py  test_updates.py
